--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Countdown</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,19 +18,32 @@
     <div class="video-overlay"></div>
     <!-- Container -->
     <div class="container">
-        <div class="input-container" id="input-container">
+        <div class="input-container" id="input-container" hidden>
             <h1>Create a Custom Countdown!</h1>
             <!-- inputs -->
             <form class="form" id="countdownForm">
                 <label for="title">Title</label>
                 <input type="text" id="title" placeholder="What are you Counting Down to!">
-                <br>
                 <label for="date-picker">Select a Date</label>
                 <input type="date" name="date-picker" id="date-picker">
                 <button type="submit">Submit</button>
             </form>
         </div>
-        <br>
+        <div class="countdown-container" hidden>
+            <h1 id="countdown-tile"> Countdwon Title here!</h1>
+            <ul>
+                <li><span>3</span>Day</li>
+                <li><span>5</span>Hours</li>
+                <li><span>30</span>Minutes</li>
+                <li><span>53</span>Second</li>
+            </ul>
+            <button id="button-countdown">reset</button>
+        </div>
+        <div class="complete" id="complete">
+            <h1 class="complete-title">Countdown Complete!</h1>
+            <h1 id="complete-info">Countdown Finished on 20-03-2024</h1>
+            <button class="complete-button">New Countdown</button>
+        </div>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
