--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="video-overlay"></div>
     <!-- Container -->
     <div class="container">
-        <div class="input-container" id="input-container" hidden>
+        <div class="input-container" id="input-container">
             <h1>Create a Custom Countdown!</h1>
             <!-- inputs -->
             <form class="form" id="countdownForm">
@@ -30,18 +30,18 @@
             </form>
         </div>
         <div class="countdown-container" hidden>
-            <h1 id="countdown-tile"> Countdwon Title here!</h1>
+            <h1 id="countdown-title"> Countdwon Title here!</h1>
             <ul>
-                <li><span>3</span>Day</li>
-                <li><span>5</span>Hours</li>
-                <li><span>30</span>Minutes</li>
-                <li><span>53</span>Second</li>
+                <li><span></span>Day</li>
+                <li><span></span>Hours</li>
+                <li><span></span>Minutes</li>
+                <li><span></span>Second</li>
             </ul>
             <button id="button-countdown">reset</button>
         </div>
-        <div class="complete" id="complete">
+        <div class="complete" id="complete" hidden>
             <h1 class="complete-title">Countdown Complete!</h1>
-            <h1 id="complete-info">Countdown Finished on 20-03-2024</h1>
+            <h1 id="complete-info"></h1>
             <button class="complete-button">New Countdown</button>
         </div>
     </div>
